# AdventOfCode

./: Cargo.toml
2024/day1/common/: Cargo.toml
2024/day1/common/src/: input_processor.rs
2024/day1/part1/: Cargo.toml
2024/day1/part1/src/: main.rs  puzzle_solver.rs
2024/day1/part1/tests/: test.rs
2024/day1/part2/: Cargo.toml
2024/day1/part2/src/: main.rs  puzzle_solver.rs
2024/day1/part2/tests/: test.rs
2024/day2/common/: Cargo.toml
2024/day2/common/src/: input_processor.rs  lib.rs
2024/day2/part1/: Cargo.toml
2024/day2/part1/src/: main.rs  puzzle_solver.rs
2024/day2/part1/tests/: test.rs
2024/day2/part2/: Cargo.toml
2024/day2/part2/src/: main.rs  puzzle_solver.rs
2024/day2/part2/tests/: test.rs
2024/day3/common/: Cargo.toml
2024/day3/common/src/: input_parser.rs  instruction.rs  lib.rs
2024/day3/part1/: Cargo.toml
2024/day3/part1/src/: main.rs  puzzle_solver.rs
2024/day3/part1/tests/: test.rs
2024/day3/part2/: Cargo.toml
2024/day3/part2/src/: main.rs  puzzle_solver.rs
2024/day3/part2/tests/: test.rs
2024/day4/common/: Cargo.toml
2024/day4/part1/: Cargo.toml
2024/day4/part2/: Cargo.toml
2024/day5/common/: Cargo.toml
2024/day5/part1/: Cargo.toml
2024/day5/part1/src/: main.rs  puzzle_solver.rs
2024/day5/part1/tests/: test.rs
2024/day5/part2/: Cargo.toml
2024/day5/part2/src/: lib.rs  (+2 more)
2024/day6/common/: Cargo.toml
2024/day6/part1/: Cargo.toml
2024/day6/part2/: Cargo.toml
advent_of_code/: Cargo.toml
advent_of_code/src/: file_reader.rs  lib.rs  puzzle_input_downloader.rs
advent_of_code/src/error/: mod.rs
(+35 files in other folders)
