[workspace]
resolver = "2"
members = [
    "2024/day1/common",
    "2024/day1/part1",
    "2024/day1/part2",
    "2024/day2/common",
    "2024/day2/part1",
    "2024/day2/part2",
    "2024/day3/common",
    "2024/day3/part1",
    "2024/day3/part2",
    "2024/day4/common",
    "2024/day4/part1",
    "2024/day4/part2",
    "2024/day5/common",
    "2024/day5/part1",
    "2024/day5/part2",
    "2024/day6/common",
    "2024/day6/part1",
    "advent_of_code",
]
